--- a/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
+++ b/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
@@ -200,7 +200,7 @@
      "output_type": "stream",
      "text": [
       "c1:  (1+1j)\n",
-      "c2:  (1-1j)\n",
+      "c1*:  (1-1j)\n",
       "Math works! c*c = |c|^2\n"
      ]
     }
@@ -211,7 +211,7 @@
     "c1 = complex(1,1)\n",
     "c2 = np.conj(c1)\n",
     "print('c1: ', str(c1))\n",
-    "print('c2: ', str(c2))\n",
+    "print('c1*: ', str(c2))\n",
     "\n",
     "#Checking to see if product of complex number and conjugate is is length^2\n",
     "\n",
@@ -360,7 +360,7 @@
     "|v| = \\sqrt{\\sum_{i = 1}^{n} v_i ^2}\n",
     "\\end{equation}\n",
     "\n",
-    "or the sum of the square of its components.\n",
+    "or the square root of the sum of the square of its components.\n",
     "\n",
     "So in a 3 dimensional case, the unit vector of $\\vec{v}$ would be\n",
     "\n",
@@ -381,26 +381,26 @@
     "In quantum computing, the main purpose of vectors is to represent the state of a qubit (or many qubits). One important thing to note before beginning quantum computing is that, <a href='https://doi.org/10.1119/10.0000258'>for reasons that one might find very elegant</a>, the formulation of quantum mechanics and concequently quantum computing is based on complex numbers and complex vectors rather than real numbers and vectors. A complex vector $\\vec{v} \\in C^N$ can be represented by the following\n",
     "\n",
     "\\begin{equation}\n",
-    "v = (v_0, v_1, v_2, ..., v_{N-1})\n",
+    "v = (v_1, v_2, v_3, ..., v_{n})\n",
     "\\end{equation}\n",
     "\n",
     "where $v_i \\in C$ (are complex numbers). The inner product of two vectors was previously defined to be the sum of the \n",
     "product of their corrersponding $i$th components. However, with complex vectors, a more general definition must be given, which is the following: \n",
     "\n",
     "\\begin{equation}\n",
-    "\\vec{u}.\\vec{v} = \\sum_{i=0}^{N-1} u^*_i v_i\n",
+    "\\vec{u}.\\vec{v} = \\sum_{i=1}^{n} u^*_i v_i\n",
     "\\end{equation}\n",
     "\n",
     "where $\\vec{u}$ and $\\vec{v}$ are vectors and $u^*_i$ is the complex conjugate of the $i$th component of $\\vec{u}$. One can see that the inner product of real vectors definition stated above is equivelent to the new, general one presented now because $a^* = a$, given that $a \\in R$. Also, the norm of a complex vector is now \n",
     "\n",
     "\\begin{equation}\n",
-    "|v| = \\sqrt{\\sum_{i = 0}^{N - 1} v_i^*v_i} = \\sqrt{\\sum_{i = 0}^{N - 1} |v_i|^2 }\n",
+    "|v| = \\sqrt{\\sum_{i = 1}^{n} v_i^*v_i} = \\sqrt{\\sum_{i = 1}^{n} |v_i|^2 }\n",
     "\\end{equation}\n",
     "\n",
     "Using the first rule of conjugation described in Section 1.2. \n",
     "\n",
     "\n",
-    "In the next chapter, a more elegant and useful notation for dealing with complex vectors will be presented. One that is used ubiquitously throughout fields such as quantum mechanics, quantum field theory and most important to us, quantum information theory. "
+    "In the next section, a more elegant and useful notation for dealing with complex vectors will be presented. One that is used ubiquitously throughout fields such as quantum mechanics, quantum field theory and most important to us, quantum information theory. "
    ]
   },
   {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
     "#Excercise: Create a function that gets the norm of a  complex vector. Bonus if you don't use np.inner()\n",
     "\n",
     "def normalize(vector):\n",
-    "    def unitVector\n"
+    "    return unitVector\n"
    ]
   },
   {
@@ -707,7 +707,7 @@
     "<\\psi|\\psi> \\geq 0 (|\\psi> \\neq 0)\n",
     "\\end{equation}\n",
     "\n",
-    "Any vector space that both satisfies the axioms stated in the first few sections and is equipped with the inner product operation that satisfies the three identities stated above is called a Hilber Space. In quantum mechanics, the wavefunction is a vector in an infinite dimensional Hilbert Space and in quantum information theory, a qubit's statevector is a vector in a 2D hilbert space (which takes the form [$c_1 c_2$], where $c_1$ and $c_2$ are the amplitudes described in Section 1.5).\n",
+    "Any vector space that both satisfies the axioms stated in the first few sections and is equipped with the inner product operation that satisfies the three identities stated above is called a Hilbert Space. In quantum mechanics, the wavefunction is a vector in an infinite dimensional Hilbert Space and in quantum information theory, a qubit's statevector is a vector in a 2D hilbert space (which takes the form [$c_1 c_2$], where $c_1$ and $c_2$ are the amplitudes described in Section 1.5).\n",
     "\n",
     "The purpose of vectors in quantum mechanics is to represent the amplitudes of every possible state in the system. The square of this amplitude vector represents the probability distribution of every possible states. It should be obvious that the sum of all probabilities should always equal 1, meaning that the sum (or more specifically the norm) of the amplitude vector squared ($|\\psi^2|$) must equal 1. Using dirac notation, this could be expressed as \n",
     "\n",
@@ -715,7 +715,7 @@
     "<\\psi|\\psi> = 1\n",
     "\\end{equation}\n",
     "\n",
-    "Very often, one would find that a system's amplitude vector (i.e wavefunction/statevector) does not satisfy the relationship above, which is where the process of normalization, which was described in Section 1.4, comes into play. To normalize a vector (i.e set its norm to 1), one must scalar multiply $|psi>$ with the normalizing constant $\\frac{1}{\\sqrt{<\\psi|\\psi>}}$, i.e\n",
+    "Very often, one would find that a system's amplitude vector (i.e wavefunction/statevector) does not satisfy the relationship above, which is where the process of normalization, which was described in Section 1.4, comes into play. To normalize a vector (i.e set its norm to 1), one must scalar multiply $|\\psi>$ with the normalizing constant $\\frac{1}{\\sqrt{<\\psi|\\psi>}}$, i.e\n",
     "\n",
     "\\begin{equation}\n",
     "|\\psi> \\rightarrow \\frac{1}{\\sqrt{<\\psi|\\psi>}} |\\psi>\n",
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -860,20 +860,21 @@
    "source": [
     "## Dirac Notation Python Module\n",
     "\n",
-    "Here, we will build a few functions based on the concepts from the past 3 sections that allow one to use bras and kets smoothly in Python, where the initial input is a list. This isn't anything special and its sole purpose is to offer a summary for the things we've learned about Dirac Notation so far. This also answers all the excercise questions above. \n",
+    "Here, we will build a small Python Module based on the concepts from the past 3 sections. It allows one to use bras and kets smoothly in Python, where the initial input is a list. This isn't anything special and its sole purpose is to offer a summary for the things we've learned about Dirac Notation so far. This also answers all the excercise questions above. \n",
     "\n",
     "### Dirac Module"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "#ket(): The user inputs a python list that is then converted into a numpy array. Nothing special \n",
     "def ket(vec):\n",
-    "    return np.array(vec)\n",
+    "    ket = np.array(vec)\n",
+    "    return ket.reshape(-1,1)\n",
     "\n",
     "\n",
     "#bra(): The user inputs a ket vector (np array) that is then transformed into a bra vector\n",
@@ -882,10 +883,10 @@
     "    #Turning the vector into a ket in case it isn't\n",
     "    Ket = ket(vec)\n",
     "    #Getting The Conjugate of the ket\n",
-    "    ket_conj = [np.conj(i) for i in Ket]\n",
+    "    ket_conj = [np.conj(i)[0] for i in Ket]\n",
     "    #Getting the transpose, which turns it into a bra\n",
-    "    bra = np.transpose([ket_conj])\n",
-    "    return np.array(bra)\n",
+    "    bra = np.array(ket_conj)\n",
+    "    return bra\n",
     "\n",
     "\n",
     "#braket(): Gets the inner product by evaluating <u|v>\n",
@@ -932,31 +933,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|u> = [ 1.+1.j  0.+0.j  1.+0.j -3.+0.j]\n",
+      "|u> =\n",
+      " [[ 1.+1.j]\n",
+      " [ 0.+0.j]\n",
+      " [ 1.+0.j]\n",
+      " [-3.+0.j]]\n",
       "\n",
-      "<v| =\n",
-      " [[0.-2.j]\n",
-      " [0.-0.j]\n",
-      " [0.-0.j]\n",
-      " [3.-1.j]]\n",
+      "<v| = [0.-2.j 0.-0.j 0.-0.j 3.-1.j]\n",
       "\n",
       "<v|u> = [-7.+1.j]\n",
       "\n",
-      "<u|v> =\n",
-      " [[ 2.-2.j  0.+0.j  0.-2.j  0.+6.j]\n",
+      "|u><v| =\n",
+      " [[ 2.-2.j  0.+0.j  0.+0.j  4.+2.j]\n",
       " [ 0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 0.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [ 4.+2.j  0.+0.j  3.-1.j -9.+3.j]]\n",
+      " [ 0.-2.j  0.+0.j  0.+0.j  3.-1.j]\n",
+      " [ 0.+6.j  0.+0.j  0.+0.j -9.+3.j]]\n",
       "\n",
-      "Normalized |u> =  [ 0.28867513+0.28867513j  0.        +0.j          0.28867513+0.j\n",
-      " -0.8660254 +0.j        ]\n",
+      "Normalized |u> =\n",
+      "  [[ 0.28867513+0.28867513j]\n",
+      " [ 0.        +0.j        ]\n",
+      " [ 0.28867513+0.j        ]\n",
+      " [-0.8660254 +0.j        ]]\n",
       "\n",
       "Are |u> and |v> orthogonal? (T/F): False\n"
      ]
@@ -985,19 +989,19 @@
     "\n",
     "#Outputs:\n",
     "\n",
-    "print('|u> =',k)\n",
+    "print('|u> =\\n',k)\n",
     "print('')\n",
-    "print('<v| =\\n', b)\n",
+    "print('<v| =', b)\n",
     "\n",
     "print('')\n",
     "\n",
     "print('<v|u> =', inner)\n",
     "print('')\n",
-    "print('<u|v> =\\n', outer)\n",
+    "print('|u><v| =\\n', outer)\n",
     "\n",
     "print('')\n",
     "\n",
-    "print('Normalized |u> = ', u_norm)\n",
+    "print('Normalized |u> =\\n ', u_norm)\n",
     "\n",
     "print('')\n",
     "\n",
@@ -1009,7 +1013,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   ##  1.8  Linearly Dependent and Independent Vectors"
+    "   ##  1.8  Linearly Dependent and Independent Vectors\n",
+    "   \n",
+    "   A set of vectors are said to be linearly independent if no vector in that set could be written as a linear combination of the other vectors. Let's say we have a vector-set **V** = {$v_1,v_2,v_3,...v_n$}, to be linearly independent, the only solution to the following equation\n",
+    "   \n",
+    "   \\begin{equation}\n",
+    "  c_1 v_1  + c_2 v_2  + c_3 v_3  + \\ldots c_n v_n  = \\sum_{i=1}^n c_i v_i  = 0\n",
+    "   \\end{equation}\n",
+    "   \n",
+    "   must be \n",
+    "   \n",
+    "   \\begin{equation}\n",
+    "   c_1 = c_2 = c_3 = \\ldots = c_n = 0\n",
+    "   \\end{equation}\n",
+    "   \n",
+    "   If the equation above is satisfied when any $c$ value $\\neq 0$, then the vectors are linearly independent."
    ]
   },
   {
@@ -1025,13 +1043,6 @@
    "source": [
     "   ##  1.10 Computational Basis"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
