--- a/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
+++ b/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
@@ -1034,15 +1034,139 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   ##  1.9 Dual Vector Space"
+    "   ##  1.9 New Description of Basis Sets, Orthonormality and Dual Spaces\n",
+    "    \n",
+    "   In Section 1.4, a rudimentary definition of a $\\textit{basis set}$ was given. The two conditions for a vector set  {$|v_1>,|v_2>,|v_3>, \\ldots, |v_n>$} to be a basis set of subspace **V**  were the following:\n",
+    "   \n",
+    "    1. Any vector in V can be written as a linear combination of the vectors in the basis set\n",
+    "    2. No vector in the basis set can be expressed as a linear combination of the other vectors in the basis set\n",
+    "    \n",
+    "  Now that more advanced concepts have been laid out, a new, more formal definition can be introduced. That definition is that a basis set must\n",
+    "  \n",
+    "    1. Any vector in subspace V can be described as a linear combilation of the vectors in the set. If this condition is applied, the set is said to span the space. This would be described notationally as follows:\n",
+    "    \n",
+    " \\begin{equation}\n",
+    " |\\psi> = \\sum_{i=1}^n c_i |v_i>\n",
+    " \\end{equation}\n",
+    "where $|\\psi>$ is any vector in **V**\n",
+    "\n",
+    "    2. The vectors in the set are linearly independent (Section 1.8)\n",
+    "    \n",
+    "    3. The vector set is complete, meaning that no additional basis set is required to describe any possible state of the system\n",
+    "    \n",
+    "\n",
+    "In Section 1.4, a vector set was said to be orthonormal if their inner product is zero and the norm of each vector was 1. Using a function called the Kronecker-Delta, one can write a single expression that describes both of these conditions, namely a vector set {$v_1, v_2,\\ldots, v_n$} is orthonormal if\n",
+    "\n",
+    "\\begin{equation}\n",
+    "<v_i|v_j> = \\delta_{ij}\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $\\delta_{ij}$ is the Kronecker-Delta function, which is defined as\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\delta_{ij} =\n",
+    "    \\begin{cases}\n",
+    "            1, &         \\text{if } i=j,\\\\\n",
+    "            0, &         \\text{if } i\\neq j.\n",
+    "    \\end{cases}\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $i$ and $j$ are integers between 1 and $n$ that represent the index of the two vectors undergoing the inner-product. The reason this works is because when $i \\neq j$, the inner product of two different vectors must be zero (orthogonal) and when $i=j$, then the inner product $<v_i|v_j>$ represents the norm of $v_i$ which must be one (normalized) (i.e orthonormal)\n",
+    "\n",
+    "\n",
+    "The concept of a dual space is fairly detailed, but for the sake of this text all you need to know is that a bra vector $<\\psi|$ is the dual of the ket vector $|\\psi>$.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   ##  1.10 Computational Basis"
+    "### Python Implementation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kronicker-Delta Function of Unit Vectors of R^4: [1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1]\n",
+      "Are they orthonormal? (T/F):  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Kronicker-Delta Function which takes a list of numpy arrays\n",
+    "import numpy as np\n",
+    "\n",
+    "def kronDelta(vecSet):\n",
+    "    #Creating an empty list that will soon be filled with all kronicker-delta values for a vectorset\n",
+    "    delta_list = []\n",
+    "    #Setting condition: for every value of i and j, if i=j, 1, if i=/=j, 0\n",
+    "    for i in range(len(vecSet)):\n",
+    "        for j in range(len(vecSet)):\n",
+    "            if i==j:\n",
+    "                delta=1\n",
+    "            else:\n",
+    "                delta = 0\n",
+    "            #Appending every result of the KD function to the empty list defined above\n",
+    "            delta_list.append(delta)\n",
+    "    #Returning the list \n",
+    "    return delta_list\n",
+    "\n",
+    "\n",
+    "#Orthonormal Checker:takes the inner product of every 2 vectors in the set and compares it to the value obtained by KD\n",
+    "\n",
+    "def orthonormalCheck(vecSet):\n",
+    "    #Gets the KD list of vecSet\n",
+    "    kdResult = kronDelta(vecSet)\n",
+    "    #Empty list that will soon be filled with all inner product values\n",
+    "    innerProds = []\n",
+    "    #Finding the all inner products of vecSet\n",
+    "    for i in range(len(vecSet)):\n",
+    "        for j in range(len(vecSet)):\n",
+    "            inner = np.inner(vecSet[i],vecset[j])\n",
+    "            #Appending every inner product result to the empty list defined above\n",
+    "            innerProds.append(inner)\n",
+    "    #Condition: if the inner-products of vecSet equals the KD of vecSet, True, else, False\n",
+    "    if innerProds == kdResult:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "#Testing our functions on the unit vectors of R^4. This should obviously yield True\n",
+    "    \n",
+    "vecset = [np.array([1,0,0,0]), np.array([0,1,0,0]), np.array([0,0,1,0]), np.array([0,0,0,1])]\n",
+    "    \n",
+    "KD = kronDelta(vecset)\n",
+    "\n",
+    "isOrthonormal = orthonormalCheck(vecset)\n",
+    "\n",
+    "print('Kronicker-Delta Function of Unit Vectors of R^4:', KD)\n",
+    "print('Are they orthonormal? (T/F): ', isOrthonormal)\n",
+    "\n",
+    "#Challenge: Build a function that shows whether a vector sec forms a basis set of C^n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   ##  1.10 Definition of Statevectors in QC\n",
+    "   \n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
