Chapter 1 Complete! Intro to Vectors

--- a/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
+++ b/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
@@ -871,7 +871,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ket(): The user inputs a python list that is then converted into a numpy array. Nothing special \n",
+    "#ket(): The user inputs a python list that is then converted into a numpy array, which is then reshaped to be a column\n",
     "def ket(vec):\n",
     "    ket = np.array(vec)\n",
     "    return ket.reshape(-1,1)\n",
@@ -882,9 +882,9 @@
     "def bra(vec):\n",
     "    #Turning the vector into a ket in case it isn't\n",
     "    Ket = ket(vec)\n",
-    "    #Getting The Conjugate of the ket\n",
+    "    #Getting The conjugates of the components of the ket and inserting them into a row vector (i.e turning it to a bra)\n",
     "    ket_conj = [np.conj(i)[0] for i in Ket]\n",
-    "    #Getting the transpose, which turns it into a bra\n",
+    "    #Reformatting it into an array \n",
     "    bra = np.array(ket_conj)\n",
     "    return bra\n",
     "\n",
@@ -1149,16 +1149,69 @@
     "print('Kronicker-Delta Function of Unit Vectors of R^4:', KD)\n",
     "print('Are they orthonormal? (T/F): ', isOrthonormal)\n",
     "\n",
-    "#Challenge: Build a function that shows whether a vector sec forms a basis set of C^n"
+    "#Challenge: Build a function that shows whether a vector set forms a basis set of C^n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   ##  1.10 Definition of Statevectors in QC\n",
+    "   ##  1.10 Statevectors\n",
     "   \n",
-    "   "
+    "You just went through a crash course of basic vector algebra and probably want a quick answer as to how you will use all of this stuff before having to go through the other two prerequisite chapters. I understand your concern, so here is your quick introduction to quantum computing:\n",
+    "\n",
+    "A quantum computer is any device which, in one way or another, utilizes the laws of quantum mechanics to perform logical operations. As we will show in the next chapter, a key property of quantum mechanics is that the physical systems it describes are intrinsically random. In other words, they are not in a definite state, but rather in a linear combination of all possible states. This is what is known as superposition. As hinted throughout this section, one would use a vector called the statevector to describe the probability of finding a particle in any given state. The number of dimensions of the statevector is equal to the number of possible states a system can be in. This statevector is represented by a ket as follows:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "|\\Psi> = \\begin{pmatrix}\\psi_1 \\\\\\ \\psi_2  \\\\\\ \\vdots \\\\\\ \\psi_n \\end{pmatrix}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Where $\\psi_i$ is a complex number that represents the a quantity called the amplitude for the $i$th state (where $i$ is between 1 and $n$). The importance of the amplitude is that when squared, it yields the probability of the system being in state $i$. Another way to represent this is by treating the main statevector |$\\Psi$> as a linear combination of basis vectors in an n-dimensional Hilbert space (as you can see, around half of the concepts we learned came up in this one sentence... so read it a few times). This would look like this:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "|\\Psi> = \\psi_1 |1> + \\psi_2 |2> + \\ldots + \\psi_n |n> = \\sum_{i=1}^n \\psi_i|i>\n",
+    "\\end{equation}\n",
+    "   \n",
+    "   As stated above, $\\psi_1 ^2$ is the probability of finding a system in state 1, $\\psi_2^2$ is the probability of finding a particle in state 2 and so on. From there, it would be easy to deduce that the sum of all the amplitudes squared, or $\\sum_{i=1}^n |\\psi_i^2|$ must be equal to the total probability of the system, which should be 1. However, remember that according to Section 1.2, $|\\psi_i^2| = \\psi_i^* \\psi_i$, which means that the sum of all amplitudes multiplied by their corresponding conjugates must equal 1. Recall that this essentially means that the norm of the vector is 1, which, when written out in Dirac Notation, takes the following form:\n",
+    "   \n",
+    "   \\begin{equation}\n",
+    "   <\\Psi|\\Psi> = 1\n",
+    "   \\end{equation}\n",
+    "   \n",
+    " I know what you're thinking. \"Ok, Adam... all this vector stuff sounds cool but what do you mean by state? State of what?\". State could mean several things. It could mean position, momentum, or any property of the system. It is just a matter of giving the statevector context about that state (i.e defining what propery to apply it to). If one would want to study the amplitude distribution of a particle's position $x$, then they have to evaluate the following inner product:\n",
+    " \n",
+    " \\begin{equation}\n",
+    " <x|\\psi>\n",
+    " \\end{equation}\n",
+    " \n",
+    "\n",
+    " And similarly for momentum $p$, $<p|\\psi>$. These inner products yield what is known as the wavefunction, which describe a system's amplitude as a function of a physical quantity squared (e.g $\\psi(x)$ for position).\n",
+    " \n",
+    " ### Qubit\n",
+    " \n",
+    " The segment above was a (frankly poor) introduction to what a statevector and wavefunction mean in quantum mechanics. But how does that explain what a quantum computer does, or equally importantly, how quantum information is represented? In a classical computer, information is simply represented by two possible **definite** states: a 0 or a 1. Anything that is in one of those states is called a bit. The function of a classical computer is to manipulate a series of bits according to its given instruction in order to create either cool things like GTA 5, or uncool things like TikTok.\n",
+    " \n",
+    " However, as described above, the principles of quantum mechanics are inherently random (non-deterministic), meaning that information (such as a bit) cannot be in a definite state, but rather in a linear combination of states defined by a statevector $|\\psi>$. In this case, given that there are only two possible states a, 1 or 0, a quantum bit's (or for short, qubit's) quantum state will be represented by a superposition (linear combination) of state $|0>$ and state |1>. Technically speaking, this would mean that a qubit is a two level quantum system represented by a ket in 2D Hilbert space:\n",
+    " \n",
+    " \\begin{equation}\n",
+    " |\\psi> = \\alpha |0> + \\beta |1>\n",
+    " \\end{equation}\n",
+    " \n",
+    " where $\\alpha$ and $\\beta$ are amplitudes that are $\\in C$, and $|0>$ and $|1>$ are basis vectors which can be represented by the following matrices:\n",
+    " \n",
+    " \\begin{equation}\n",
+    " |0> = \\begin{pmatrix}1 \\\\\\ 0\\end{pmatrix} and |1> = \\begin{pmatrix}0 \\\\\\ 1\\end{pmatrix}\n",
+    " \\end{equation}\n",
+    " \n",
+    " If one were to expand $|0>$ and $|1>$ into their matrix representation in the superposition expression described above, then one would get the following:\n",
+    " \n",
+    " \\begin{equation}\n",
+    " |\\psi> = \\alpha \\begin{pmatrix}1 \\\\\\ 0\\end{pmatrix} + \\beta \\begin{pmatrix}0 \\\\\\ 1\\end{pmatrix} \\newline = \\begin{pmatrix}\\alpha \\\\\\ 0\\end{pmatrix} + \\begin{pmatrix}0 \\\\\\ \\beta \\end{pmatrix} \\newline = \\begin{pmatrix}\\alpha \\\\\\ \\beta\\end{pmatrix}\n",
+    " \\end{equation}\n",
+    " \n",
+    " \n",
+    " I can go on and on about this topic but will have to stop here to save some information for the coming chapters\n",
+    " "
    ]
   },
   {
@@ -1166,7 +1219,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Go nuts here:\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
