--- a/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
+++ b/Chapter 1 - Math Tools I (Vectors, Complex Numbers and Dirac Notation).ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The aim of this chapter is not to explain the basics of quantum information theory or quantum mechanics. It is rather directed towards introducing the language that both of these fields are built on, linear algebra. Both Chapter 1 and Chapter 3 attempt to establish the mathematical foundation necessary to keep up with this (fairly introductory) series. The module that will be used to demonstrate applications to Python is  <a href=\"https://www.numpy.org\">Numpy</a>.\n",
+    "The aim of this chapter is not to explain the basics of quantum information theory or quantum mechanics. It is rather directed towards introducing the language that both of these fields are built on, linear algebra. Both Chapter 1 and Chapter 2 attempt to establish the mathematical foundation necessary to keep up with this (fairly introductory) series. The module that will be used to demonstrate applications to Python is  <a href=\"https://www.numpy.org\">Numpy</a>.\n",
     "\n",
     "**Note:** While I do attempt to survey these topics briefly enough for one to grasp everything else mentioned in throughout the 8 Chapters, a solid understanding of both vector and matrix algebra is much advised.\n"
    ]
@@ -43,9 +43,9 @@
     "  \n",
     "  The angle formed with the x-axis (also called the argument) can be obtained using basic trigonometry. One would find that its value is $\\theta = \\tan^{-1}(b/a)$. \n",
     "  \n",
-    "  ### Operations on complex numers\n",
+    "  ### Operations on complex numbers\n",
     "  \n",
-    "  Let's say we have 2 complex numbers, $c_1 = a + ib $ and $c_2 = d + ie$, and we want to apply basic mathematical operations on these two numbers. One would do that via the following methods:\n",
+    "  Let's say we have 2 complex numbers, $c_1 = a + ib $ and $c_2 = d + ie$, and we want to apply basic mathematical operations on these two numbers. One would do that via the following methods: \n",
     "  \n",
     "  **Addition:**\n",
     "  \n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
     " \\end{equation}\n",
     " \n",
     "\n",
-    " And similarly for momentum $p$, $<p|\\psi>$. These inner products yield what is known as the wavefunction, which describe a system's amplitude as a function of a physical quantity squared (e.g $\\psi(x)$ for position).\n",
+    " And similarly for momentum $p$, $<p|\\psi>$. These inner products yield what is known as the wavefunction, which describe a system's amplitude as a function of the physical quantity (e.g $\\psi(x)$ for position).\n",
     " \n",
     " ### Qubit\n",
     " \n",
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
