--- a/Chapter 3 - Quantum Mechanics.ipynb
+++ b/Chapter 3 - Quantum Mechanics.ipynb
@@ -165,7 +165,7 @@
     "\n",
     "\n",
     "\n",
-    "#Exercise: Build the followingfunctions which are equivilent to the QSolve functions\n",
+    "#Exercise: Build the following functions which are equivilent to the QSolve functions\n",
     "\n",
     "def deBroglieWavelength(momentum):\n",
     "    return\n",
@@ -220,7 +220,7 @@
    "source": [
     "  ##  2.3 Quantum Mechanics\n",
     "  \n",
-    "  In Section 2.1, we stated that a key feature of using classical mechanics to study the dynamics of a system is that you can model it in a deterministic manner. In other words, if you know the current state of a system, and no external factors are introduced, you can almost perfectly predict the future state of the system using classical laws. We then showed that for certain systems, especially those in small scales, these laws do not hold, meaning that a new framework is necessary to describe these systems. That framework is what we call Quantum Mechanics. One important property about a quantum system is that, unlike a classical system it is non-deterministic. In other words, we cannot predict the future state of a system using its current state. As a concequence of the random nature of quantum mechanics, a system's state can no longer described by localized physical quantities such as momentum and position, but are rather described by a dimensionless quantity called the *wavefunction*, which, once squared, gives the probability distribution of a particle being at every possible state in any given time. Sections 2.3 and 2.4 aim at briefly explaining how these laws can be used to model a system."
+    "  In Section 2.1, we stated that a key feature of using classical mechanics to study the dynamics of a system is that you can model it in a deterministic manner. In other words, if you know the current state of a system, and no external factors are introduced, you can almost perfectly predict the future state of the system using classical laws. We then showed that for certain systems, especially those in small scales, these laws do not hold, meaning that a new framework is necessary to describe these systems. That framework is what we call Quantum Mechanics. One important property about a quantum system is that, unlike a classical system it is non-deterministic. In other words, we cannot predict the future state of a system using its current state. As a concequence of the random nature of quantum mechanics, a system's state can no longer described by localized physical quantities such as momentum and position, but are rather described by a dimensionless quantity called the *wavefunction*, which, once squared, gives the probability distribution of a particle being at any possible state in any given time. Sections 2.3 and 2.4 aim at briefly explaining how these laws can be used to model a system."
    ]
   },
   {
